compiler/tests/liva/errors/e0903_string_exhaustiveness.liva
// Error Test: E0903 — Non-exhaustive string switch (needs _ wildcard)
// EXPECT: E0903
main() {
    let day = "Monday"
    let msg = switch day {
        "Monday" => "start of week",
        "Friday" => "end of week"
    }
    print(msg)
}
